[tool.poetry]
name = "twm-env"
version = "0.1.0"
description = "make your tiling window manager workspaces come alive"
authors = ["Dániel Kántor <git@daniel-kantor.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
